[package]
name = "telegram_user_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
pretty_env_logger = "0.5"
log = "0.4"
grammers-client = "0.9.0"
grammers-tl-types = "0.9.0"
grammers-session = { version = "0.9.0", features = ["sqlite-storage"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "time"] }
clickhouse = "0.14.2"
serde = { version = "1.0.228", features = ["derive"] }
