[package]
name = "telegram_user_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11"
chrono = "0.4"
chrono-tz = "0.10"
log = "0.4"
grammers-client = { git = "https://codeberg.org/Lonami/grammers.git" }
grammers-tl-types = { git = "https://codeberg.org/Lonami/grammers.git", features = ["impl-serde"] }
serde_json = "1"
grammers-session = { git = "https://codeberg.org/Lonami/grammers.git", features = ["sqlite-storage"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "time"] }
clickhouse = "0.14.2"
serde = { version = "1.0.228", features = ["derive"] }
diff = "0.1"
