[package]
name = "telegram_user_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11"
chrono = "0.4"
chrono-tz = "0.10"
log = "0.4"
grammers-client = { git = "https://codeberg.org/Lonami/grammers.git" }
grammers-tl-types = { git = "https://codeberg.org/Lonami/grammers.git", features = ["impl-serde", "deserializable-functions"] }
serde_json = "1"
grammers-session = { git = "https://codeberg.org/Lonami/grammers.git" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
clickhouse = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
similar = "3.1"
dialoguer = "0.12"
futures-core = "0.3"
